--- a/tests/.env
+++ b/tests/.env
@@ -11,12 +11,29 @@ YII_ENV=dev
 COOKIE_VALIDATION_KEY="SeCrEt_DeV_Key--DO-NOT-USE-IN-PRODUCTION!"
 
 # DB credentials. Default is to fetch the host form docker vars and use 'web' as db name, username and password
-DB_DSN=mysql:host=db;dbname=web
+DB_DSN=mysql:host=mysql;dbname=web
 DB_USER=web
 DB_PASSWORD=web
 
-# Configure a SMTP server here if you want to send emails
-SMTP_HOST="smtp.demo.com"
-SMTP_USER="user@demo.com"
-SMTP_PASSWORD="password"
+# DB credentials. Default is to fetch the host form docker vars and use 'web' as db name, username and password
+TEST_DB_DSN=mysql:host=mysql;dbname=web
+TEST_DB_USER=web
+TEST_DB_PASSWORD=web
 
+# Configure a SMTP server here if you want to send emails
+SMTP_HOST="smtp.mail.com"
+SMTP_USER="user"
+SMTP_PASSWORD="pwd"
+
+# Redis Config
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DATABASE=0
+REDIS_PASSWORD=null
+
+# Test Redis Config
+
+TEST_REDIS_HOST=redis
+TEST_REDIS_PORT=6379
+TEST_REDIS_DATABASE=0
