--- a/deploy/staging/services/nginx/nginx.conf
+++ b/deploy/staging/services/nginx/nginx.conf
@@ -28,7 +28,12 @@ http {
 
     server {
 
-        listen        80;
+        listen        999 ssl;
+        ssl_certificate    /etc/nginx/ssl-cert/ssl.crt;
+        ssl_certificate_key    /etc/nginx/ssl-cert/ssl.key;
+        ssl_protocols    TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers    ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains;preload" always;
 
         charset utf-8;
         client_max_body_size 128M;
