--- a/.gitlab-ci.example.yml
+++ b/.gitlab-ci.example.yml
@@ -39,7 +39,7 @@ unit-test:
     stage: testing
     services:
         - mysql:5.6
-        - redis:latest
+        - redis:alpine
     variables:
         MYSQL_ROOT_PASSWORD: root
         MYSQL_DATABASE: web
@@ -66,7 +66,7 @@ api-test:
     stage: testing
     services:
         - mysql:5.6
-        - redis:latest
+        - redis:alpine
     variables:
         MYSQL_ROOT_PASSWORD: root
         MYSQL_DATABASE: web
@@ -132,12 +132,13 @@ testing-server:
     image: alpine
     variables:
         DEPLOY_SERVER: "deploy server address"
+    dependencies: []
     script:
         - cd deploy
         - rsync -rtvhze ssh . root@$DEPLOY_SERVER:/dirname/$CI_PROJECT_NAME --stats
         - CHOWN_DIR="frontend/runtime frontend/web/assets frontend/web/galleries frontend/web/uploads backend/runtime backend/web/assets backend/rbac console/runtime api/runtime"
         - ssh root@$DEPLOY_SERVER "docker login -u username -p password registry.domain.com"
-        - ssh root@$DEPLOY_SERVER "cd /dirname/$CI_PROJECT_NAME && docker-compose stop && docker-compose rm -f && docker-compose pull && docker-compose up -d"
+        - ssh root@$DEPLOY_SERVER "export COMPOSE_HTTP_TIMEOUT=120 && export DOCKER_CLIENT_TIMEOUT=120 && export TAG=$CI_BUILD_TAG && cd /data/$CI_PROJECT_NAME && docker-compose pull && docker-compose stop && docker-compose rm -f && docker-compose up -d --build"
         - ssh root@$DEPLOY_SERVER "docker exec -i $CI_PROJECT_NAME chown www-data:www-data $CHOWN_DIR"
         - ssh root@$DEPLOY_SERVER "docker exec -i $CI_PROJECT_NAME ./yii migrate/up --interactive=0"
     only:
@@ -150,13 +151,13 @@ staging-server:
     image: alpine
     variables:
         DEPLOY_SERVER: "deploy server address"
-    before_script: []
+    dependencies: []
     script:
         - cd deploy
         - rsync -rtvhze ssh . root@$DEPLOY_SERVER:/dirname/$CI_PROJECT_NAME --stats
         - CHOWN_DIR="frontend/runtime frontend/web/assets frontend/web/galleries frontend/web/uploads backend/runtime backend/web/assets backend/rbac console/runtime api/runtime"
         - ssh root@$DEPLOY_SERVER "docker login -u username -p password registry.domain.com"
-        - ssh root@$DEPLOY_SERVER "cd /data/$CI_PROJECT_NAME && docker-compose stop && docker-compose rm -f && docker-compose pull && docker-compose up -d"
+        - ssh root@$DEPLOY_SERVER "export COMPOSE_HTTP_TIMEOUT=120 && export DOCKER_CLIENT_TIMEOUT=120 && export TAG=$CI_BUILD_TAG && cd /data/$CI_PROJECT_NAME && docker-compose pull && docker-compose stop && docker-compose rm -f && docker-compose up -d --build"
         - ssh root@$DEPLOY_SERVER "docker exec -i $CI_PROJECT_NAME chown www-data:www-data $CHOWN_DIR"
         - ssh root@$DEPLOY_SERVER "docker exec -i $CI_PROJECT_NAME ./yii migrate/up --interactive=0"
     only:
@@ -169,12 +170,13 @@ production-server:
     image: alpine
     variables:
         DEPLOY_SERVER: "deploy server address"
+    dependencies: []
     script:
         - cd deploy
         - rsync -rtvhze ssh . root@$DEPLOY_SERVER:/dirname/$CI_PROJECT_NAME --stats
         - CHOWN_DIR="frontend/runtime frontend/web/assets frontend/web/galleries frontend/web/uploads backend/runtime backend/web/assets backend/rbac console/runtime api/runtime"
         - ssh root@$DEPLOY_SERVER "docker login -u username -p password registry.domain.com"
-        - ssh root@$DEPLOY_SERVER "cd /data/$CI_PROJECT_NAME && export TAG=$CI_BUILD_TAG && docker-compose stop && docker-compose rm -f && docker-compose pull && docker-compose up -d"
+        - ssh root@$DEPLOY_SERVER "export COMPOSE_HTTP_TIMEOUT=120 && export DOCKER_CLIENT_TIMEOUT=120 && export TAG=$CI_BUILD_TAG && cd /data/$CI_PROJECT_NAME && docker-compose pull && docker-compose stop && docker-compose rm -f && docker-compose up -d --build"
         - ssh root@$DEPLOY_SERVER "docker exec -i $CI_PROJECT_NAME chown www-data:www-data $CHOWN_DIR"
         - ssh root@$DEPLOY_SERVER "docker exec -i $CI_PROJECT_NAME ./yii migrate/up --interactive=0"
     only:
