--- a/.env
+++ b/.env
@@ -14,6 +14,8 @@ COOKIE_VALIDATION_KEY="SeCrEt_DeV_Key--DO-NOT-USE-IN-PRODUCTION!"
 DB_DSN=mysql:host=db;dbname=web
 DB_USER=web
 DB_PASSWORD=web
+DB_TABLE_PREFIX=prefix_
+DB_CHARSET=utf8
 
 # Configure a SMTP server here if you want to send emails
 SMTP_HOST="smtp.demo.com"
