--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
             - ~/.ssh:/root/.ssh
             - ./services/php/local.ini:/usr/local/etc/php/conf.d/local.ini
         links:
-            - db
+            - mysql
+            - redis
         environment:
             ENABLE_ENV_FILE: 1
             ENABLE_LOCALCONF: 1
@@ -18,7 +19,7 @@ services:
             - 9000
 
     nginx:
-        build: ./services/nginx
+        image: zacksleo/nginx:yii2
         ports:
             - "80:80"
         links:
@@ -26,10 +27,10 @@ services:
         volumes_from:
             - web
 
-    db:
+    mysql:
         image: mysql:5.6
         ports:
-            - "3316:3306"
+            - "3306:3306"
         expose:
             - "3306"
         environment:
@@ -39,6 +40,9 @@ services:
             MYSQL_PASSWORD: web
         volumes:
             - ./services/mysql:/var/lib/mysql
-            - ./services/mysql/mysql.cfg:/etc/mysql/conf.d/mysql.cfg
-        # Autostart at boottime
-        #restart: always
+        restart: always
+    redis:
+        image: redis:latest
+        expose:
+            - "6379"
+        restart: always
