--- a/tests/.env
+++ b/tests/.env
@@ -14,11 +14,8 @@ COOKIE_VALIDATION_KEY="SeCrEt_DeV_Key--DO-NOT-USE-IN-PRODUCTION!"
 DB_DSN=mysql:host=mysql;dbname=web
 DB_USER=web
 DB_PASSWORD=web
-
-# DB credentials. Default is to fetch the host form docker vars and use 'web' as db name, username and password
-TEST_DB_DSN=mysql:host=mysql;dbname=web
-TEST_DB_USER=web
-TEST_DB_PASSWORD=web
+DB_TABLE_PREFIX=prefix_
+DB_CHARSET=utf8
 
 # Configure a SMTP server here if you want to send emails
 SMTP_HOST="smtp.mail.com"
@@ -32,8 +29,3 @@ REDIS_PORT=6379
 REDIS_DATABASE=0
 REDIS_PASSWORD=null
 
-# Test Redis Config
-
-TEST_REDIS_HOST=redis
-TEST_REDIS_PORT=6379
-TEST_REDIS_DATABASE=0
