--- a/tests/api.suite.yml
+++ b/tests/api.suite.yml
@@ -3,7 +3,7 @@ bootstrap: false
 modules:
     enabled:
         - Yii2:
-            configFile: '../common/config/test.php'
+            configFile: '../common/config/test-local.php'
         - Db:
             dsn: mysql:host=mysql;dbname=web
             user: web
@@ -16,4 +16,4 @@ modules:
             url: http://localhost:80/api/v1/
             depends: PhpBrowser
             part: Json
-        
+
