--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ YII_ENV=dev
 COOKIE_VALIDATION_KEY="SeCrEt_DeV_Key--DO-NOT-USE-IN-PRODUCTION!"
 
 # DB credentials. Default is to fetch the host form docker vars and use 'web' as db name, username and password
-DB_DSN=mysql:host=db;dbname=web
+DB_DSN=mysql:host=mysql;dbname=web
 DB_USER=web
 DB_PASSWORD=web
 DB_TABLE_PREFIX=prefix_
