--- a/.gitattributes
+++ b/.gitattributes
@@ -3,9 +3,10 @@
 /tests export-ignore
 /.github export-ignore
 .gitattributes export-ignore
-.gitignore export-ignore
 .scrutinizer.yml export-ignore
 .styleci.yml export-ignore
 .codeclimate.yml export-ignore
 .travis.yml export-ignore
 phpunit.xml.dist export-ignore
+/README.md
+/README-cn.md
