--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,9 @@
 * text=auto
 
-/tests export-ignore
 /.github export-ignore
 .gitattributes export-ignore
 .scrutinizer.yml export-ignore
 .styleci.yml export-ignore
-.codeclimate.yml export-ignore
 .travis.yml export-ignore
-phpunit.xml.dist export-ignore
-/README.md
-/README-cn.md
+/README.md export-ignore
+/README-cn.md export-ignore
