--- a/deploy/production/docker-compose.yml
+++ b/deploy/production/docker-compose.yml
@@ -14,36 +14,21 @@ services:
             - ./data/frontend/runtime:/var/www/html/frontend/runtime
             - ./data/frontend/web/assets:/var/www/html/frontend/web/assets
             - ./data/frontend/web/uploads:/var/www/html/frontend/web/uploads
-        links:
-            - mysql
         environment:
             ENABLE_ENV_FILE: 1
             ENABLE_LOCALCONF: 1
             API_TOKEN: "47591fb1175145933b20f80d89c9da0381e9339a"
         expose:
             - 9000
+        restart: always
 
     nginx:
-        build: ./services/nginx
+        image: zacksleo/nginx:yii2
         ports:
-            - "443:443"
+            - "80:80"
         links:
             - web
         volumes_from:
             - web
-
-    mysql:
-        image: mysql:5.6
-        expose:
-            - "3306"
-        environment:
-            MYSQL_ROOT_PASSWORD: root
-            MYSQL_DATABASE: web
-            MYSQL_USER: web
-            MYSQL_PASSWORD: web
-        volumes:
-            - ./data/mysql:/var/lib/mysql
-            - ./services/mysql/mysql.cfg:/etc/mysql/conf.d/mysql.cfg
-        # Autostart at boottime
-        #restart: always
+        restart: always
 
