refact(mysql): utf8 to utf8mb4

--- a/tests/.env
+++ b/tests/.env
@@ -15,7 +15,7 @@ DB_DSN=mysql:host=mysql;dbname=web
 DB_USER=web
 DB_PASSWORD=web
 DB_TABLE_PREFIX=prefix_
-DB_CHARSET=utf8
+DB_CHARSET=utf8mb4
 
 # Configure a SMTP server here if you want to send emails
 SMTP_HOST="smtp.mail.com"
