--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
             MYSQL_PASSWORD: web
         volumes:
             - ./deploy/development/mysql:/var/lib/mysql
-
+        command: ['--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
     redis:
         image: redis:latest
         expose:
