refact(src): genesis support

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
+# App Config
+APP_ID=DummyId
+APP_NAME=DummyAppName
+ADMIN_EMAIL=DummyAdminEmail
+
 # Whether to enable debug mode in Yii. If not set this will be 0.
 YII_DEBUG=1
 
@@ -8,7 +13,7 @@ YII_ENV=dev
 #YII_TRACELEVEL=0
 
 # Make sure that you provide a different unique cookie validation key in production
-COOKIE_VALIDATION_KEY="SeCrEt_DeV_Key--DO-NOT-USE-IN-PRODUCTION!"
+COOKIE_VALIDATION_KEY="DummyValidationKey"
 
 # DB credentials. Default is to fetch the host form docker vars and use 'web' as db name, username and password
 DB_DSN=mysql:host=mysql;dbname=web
