--- a/deploy/production/.env
+++ b/deploy/production/.env
@@ -1,3 +1,8 @@
+# App Config
+APP_ID=DummyId
+APP_NAME=DummyAppName
+ADMIN_EMAIL=DummyAdminEmail
+
 # Whether to enable debug mode in Yii. If not set this will be 0.
 YII_DEBUG=1
 
@@ -8,13 +13,13 @@ YII_ENV=dev
 #YII_TRACELEVEL=0
 
 # Make sure that you provide a different unique cookie validation key in production
-COOKIE_VALIDATION_KEY="SeCrEt_DeV_Key--DO-NOT-USE-IN-PRODUCTION!"
+COOKIE_VALIDATION_KEY="DummyValidationKey"
 
 # DB credentials. Default is to fetch the host form docker vars and use 'web' as db name, username and password
-DB_DSN=mysql:host=mysql;dbname=web
-DB_USER=web
-DB_PASSWORD=web
-DB_TABLE_PREFIX=prefix_
+DB_DSN=mysql:host=mysql;dbname=DummyId
+DB_USER=DummyId
+DB_PASSWORD=DummyDbPassword
+DB_TABLE_PREFIX=DummyId_
 DB_CHARSET=utf8mb4
 
 # Configure a SMTP server here if you want to send emails
@@ -27,4 +32,3 @@ SMTP_PASSWORD="password"
 REDIS_HOST="host"
 REDIS_PORT="6379"
 REDIS_DATABASE="0"
-REDIS_PASSWORD="password"
