chore(deploy): change dev to prod

--- a/deploy/production/.env
+++ b/deploy/production/.env
@@ -4,10 +4,10 @@ APP_NAME=DummyAppName
 ADMIN_EMAIL=DummyAdminEmail
 
 # Whether to enable debug mode in Yii. If not set this will be 0.
-YII_DEBUG=1
+YII_DEBUG=0
 
 # The application mode. If not set, this will be 'prod'
-YII_ENV=dev
+YII_ENV=prod
 
 # The log trace level. If not set, this will be 0
 #YII_TRACELEVEL=0
@@ -29,6 +29,6 @@ SMTP_PASSWORD="password"
 
 # Redis Config
 
-REDIS_HOST="host"
+REDIS_HOST="redis"
 REDIS_PORT="6379"
 REDIS_DATABASE="0"
