--- a/composer.json
+++ b/composer.json
@@ -12,19 +12,22 @@
   "prefer-stable": true,
   "minimum-stability": "dev",
   "require": {
-    "yiisoft/yii2": "^2.0",
     "vlucas/phpdotenv": "^2.4",
-    "yiisoft/yii2-gii": "^2.0",
+    "yiisoft/yii2": "^2.0",
     "yiisoft/yii2-debug": "^2.0",
+    "yiisoft/yii2-gii": "^2.0",
     "zacksleo/yii2-backend": "^2.0"
   },
   "require-dev": {
     "codeception/codeception": "^2.2",
     "codeception/specify": "*",
-    "squizlabs/php_codesniffer": "^3.2",
-    "phpmd/phpmd": "^2.6"
+    "phpmd/phpmd": "^2.6",
+    "squizlabs/php_codesniffer": "^3.2"
   },
   "config": {
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "optimize-autoloader": true,
     "process-timeout": 1800,
     "vendor-dir": "vendor",
     "fxp-asset": {
