fix(config): env not work well

--- a/tests/.env
+++ b/tests/.env
@@ -7,7 +7,7 @@ ADMIN_EMAIL=test@gmail.com
 YII_DEBUG=1
 
 # The application mode. If not set, this will be 'prod'
-YII_ENV=dev
+YII_ENV=test
 
 # The log trace level. If not set, this will be 0
 #YII_TRACELEVEL=0
