--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,19 +24,19 @@ services:
             - web
 
     mysql:
-        image: mysql:5.6
+        image: mysql:8
         ports:
             - "3306:3306"
         expose:
             - "3306"
         environment:
-            MYSQL_ROOT_PASSWORD: root
-            MYSQL_DATABASE: web
-            MYSQL_USER: web
-            MYSQL_PASSWORD: web
+            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+            MYSQL_DATABASE: ${DB_USER}
+            MYSQL_USER: ${DB_USER}
+            MYSQL_PASSWORD: ${DB_PASSWORD}
         volumes:
             - ./deploy/development/mysql:/var/lib/mysql
-        command: ['--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
+        command: ['--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci','--default-authentication-plugin=mysql_native_password']
     redis:
         image: redis:latest
         expose:
