--- a/.gitattributes
+++ b/.gitattributes
@@ -6,4 +6,6 @@
 .styleci.yml export-ignore
 .travis.yml export-ignore
 /README.md export-ignore
-/README-cn.md export-ignore
+/docs export-ignore
+.travis.yml export-ignore
+.travis.env export-ignore
