--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ services:
 install:
 - travis_retry composer self-update
 - travis_retry composer install --prefer-dist --no-interaction
-- ls
-- cat .env
+- cp .travis.env test/.env
 - mv .travis.env .env
 
 before_script:
