fix(travis): ci

--- a/.travis.env
+++ b/.travis.env
@@ -16,7 +16,7 @@ YII_ENV=dev
 COOKIE_VALIDATION_KEY="DummyValidationKey"
 
 # DB credentials. Default is to fetch the host form docker vars and use 'web' as db name, username and password
-DB_DSN=mysql:host=localhost;dbname=web
+DB_DSN=mysql:host=127.0.0.1;dbname=web
 DB_USER=root
 DB_PASSWORD=''
 DB_TABLE_PREFIX=prefix_
